--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
     width: 375px;
     box-sizing: border-box;
     background-color: #495795;
-    background-image: url(/img/4@2x.png);
+    background-image: url(../img/4@2x.png);
     background-repeat: no-repeat;
     background-size: cover; 
     padding: 40px 20px;
